--- a/css/styles.css
+++ b/css/styles.css
@@ -625,6 +625,9 @@ color: var(--background);
 /*----- MODAL----- */
 
 /*  */
+.modal-form{
+  padding-bottom: 24px;
+}
 .svg-modal-items{
   fill: #2E2F42;;
  
@@ -673,6 +676,7 @@ color: rgba(117, 117, 117, 0.5);;
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
+  
   
 }
 
@@ -748,10 +752,13 @@ font-size: 12px;
 line-height: 16px;
 letter-spacing: 0.04em;
 margin-bottom: 4px;
-margin-top: 8px;
 
 
 
+
+}
+.modal-distance{
+  margin-top: 8px;
 }
 
 .privacy-label{
@@ -799,9 +806,7 @@ border: none;
 display: block;
 margin-left: auto;
 margin-right: auto;
-
 transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 
 }
 
